@@ -55,9 +55,12 @@ URBI_LIBPORT
 
 AC_CONFIG_HEADERS([src/config.h])
 URBI_TESTS
+
 AC_CONFIG_FILES([Makefile
 		   src/Makefile
 		     src/ast/Makefile
 		     src/object/Makefile
-		     src/runner/Makefile])
+		     src/runner/Makefile
+])
+
 AC_OUTPUT
