@@ -1,3 +1,12 @@
+2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Minor changes.
+	* configure.ac: Aesthetic changes.
+	* src/runner/coroutine.cc,
+	* src/runner/coroutine.hh: Disable debug traces.
+	* src/uconnection.cc: Print debug message only with
+	ENABLE_DEBUG_TRACES.
+
 2007-09-09  mefyl  <mefyl@gruntech.net>
 
 	Remove coroutines debug traces.
